--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
 Flask == 3.0.3
-flask_sqlalchemy == 3.1.1
 flask_bcrypt == 1.0.1
 gunicorn == 20.0.4
 wfastcgi==3.0.0
+Flask-Login == 0.6.3
+Flask-Mail == 0.10.0
+Flask-SQLAlchemy == 3.1.1
+Flask-WTF == 1.2.1
+pillow == 10.4.0
+WTForms == 3.1.2
+DateTime == 5.5
+itsdangerous == 2.2.0
